--- a/index.html
+++ b/index.html
@@ -54,6 +54,7 @@
 
 
     <script src="https://code.jquery.com/jquery-1.12.3.min.js" integrity="sha256-aaODHAgvwQW1bFOGXMeX+pC4PZIPsvn2h1sArYOhgXQ=" crossorigin="anonymous"></script>
+    <script type="text/javascript" src="globals.js"></script>
     <script type="text/javascript" src="app.js"></script>
   </body>
 </html>
